Add colors for light theme

--- a/view/src/components/TubesPreview.css
+++ b/view/src/components/TubesPreview.css
@@ -11,7 +11,8 @@
   width: 30px;
   height: 80px;
   margin: 2px;
-  border: 2px #bcbcbc solid;
+  /* border: 2px #bcbcbc solid; */
+  border: 1px #cccccc solid;
 }
 
 .TubesPreview-water {
